2018.8/_sources/plugins/available/longitudinal/pairwise-differences.txt
pairwise-differences: Paired difference testing and boxplots
============================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime longitudinal pairwise-differences [OPTIONS]

     Performs paired difference testing between samples from each subject.
     Sample pairs may represent a typical intervention study, e.g., samples
     collected pre- and post-treatment; paired samples from two different
     timepoints (e.g., in a longitudinal study design), or identical samples
     receiving different two different treatments. This action tests whether
     the change in a numeric metadata value "metric" differs from zero and
     differs between groups (e.g., groups of subjects receiving different
     treatments), and produces boxplots of paired difference distributions for
     each group. A feature table artifact is required input, though whether
     "metric" is derived from the feature table or metadata is optional.

   Options:
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. Sample
                                     metadata file containing
                                     individual_id_column.  [required]
     --p-metric TEXT                 Numerical metadata or artifact column to
                                     test.  [required]
     --p-state-column TEXT           Metadata column containing state (e.g.,
                                     Time) across which samples are paired.
                                     [required]
     --p-state-1 TEXT                Baseline state column value.  [required]
     --p-state-2 TEXT                State column value to pair with baseline.
                                     [required]
     --p-individual-id-column TEXT   Metadata column containing subject IDs to
                                     use for pairing samples. WARNING: if
                                     replicates exist for an individual ID at
                                     either state_1 or state_2, that subject will
                                     be dropped and reported in standard output
                                     by default. Set replicate_handling="random"
                                     to instead randomly select one member.
                                     [required]
     --p-group-column TEXT           Metadata column on which to separate groups
                                     for comparison  [optional]
     --p-parametric / --p-no-parametric
                                     Perform parametric (ANOVA and t-tests) or
                                     non-parametric (Kruskal-Wallis, Wilcoxon,
                                     and Mann-Whitney U tests) statistical tests.
                                     [default: False]
     --p-palette [Pastel2|terrain|rainbow|Set1|tab20b|plasma|tab10|tab20|Set3|Dark2|magma|Paired|tab20c|Pastel1|Set2|viridis|Accent|inferno]
                                     Color palette to use for generating
                                     boxplots.  [default: Set1]
     --p-replicate-handling [random|error|drop]
                                     Choose how replicate samples are handled. If
                                     replicates are detected, "error" causes
                                     method to fail; "drop" will discard all
                                     replicated samples; "random" chooses one
                                     representative at random from among
                                     replicates.  [default: error]
     --i-table ARTIFACT PATH FeatureTable[RelativeFrequency]
                                     Feature table to optionally use for paired
                                     comparisons.  [optional]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.longitudinal.visualizers import pairwise_differences

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Paired difference testing and boxplots

   Performs paired difference testing between samples from each subject.
   Sample pairs may represent a typical intervention study, e.g., samples
   collected pre- and post-treatment; paired samples from two different
   timepoints (e.g., in a longitudinal study design), or identical samples
   receiving different two different treatments. This action tests whether the
   change in a numeric metadata value "metric" differs from zero and differs
   between groups (e.g., groups of subjects receiving different treatments),
   and produces boxplots of paired difference distributions for each group. A
   feature table artifact is required input, though whether "metric" is
   derived from the feature table or metadata is optional.

   Parameters
   ----------
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   metric : Str
       Numerical metadata or artifact column to test.
   state_column : Str
       Metadata column containing state (e.g., Time) across which samples are
       paired.
   state_1 : Str
       Baseline state column value.
   state_2 : Str
       State column value to pair with baseline.
   individual_id_column : Str
       Metadata column containing subject IDs to use for pairing samples.
       WARNING: if replicates exist for an individual ID at either state_1 or
       state_2, that subject will be dropped and reported in standard output
       by default. Set replicate_handling="random" to instead randomly select
       one member.
   group_column : Str, optional
       Metadata column on which to separate groups for comparison
   parametric : Bool, optional
       Perform parametric (ANOVA and t-tests) or non-parametric (Kruskal-
       Wallis, Wilcoxon, and Mann-Whitney U tests) statistical tests.
   palette : Str % Choices({'Accent', 'Dark2', 'Paired', 'Pastel1', 'Pastel2', 'Set1', 'Set2', 'Set3', 'inferno', 'magma', 'plasma', 'rainbow', 'tab10', 'tab20', 'tab20b', 'tab20c', 'terrain', 'viridis'}), optional
       Color palette to use for generating boxplots.
   replicate_handling : Str % Choices({'drop', 'error', 'random'}), optional
       Choose how replicate samples are handled. If replicates are detected,
       "error" causes method to fail; "drop" will discard all replicated
       samples; "random" chooses one representative at random from among
       replicates.
   table : FeatureTable[RelativeFrequency], optional
       Feature table to optionally use for paired comparisons.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>